Models, entities, orm

--- a/back/.env
+++ b/back/.env
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=f91d66ae66438451f7bba914e8a6d0f0
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="postgresql://ddd:1234@postgres:5432/ddd?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
