--- a/back/.env
+++ b/back/.env
@@ -22,3 +22,10 @@ APP_SECRET=f91d66ae66438451f7bba914e8a6d0f0
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL="postgresql://ddd:1234@postgres:5432/ddd?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
