--- a/back/.env
+++ b/back/.env
@@ -27,5 +27,5 @@ DATABASE_URL="postgresql://ddd:1234@postgres:5432/ddd?serverVersion=16&charset=u
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=amqp://ddd:1234@rabbitmq:5672
 ###< symfony/messenger ###
