Finishing backend, csv using generators, events, charge registration, email notification, storage

--- a/back/.env
+++ b/back/.env
@@ -29,3 +29,7 @@ DATABASE_URL="postgresql://ddd:1234@postgres:5432/ddd?serverVersion=16&charset=u
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=amqp://ddd:1234@rabbitmq:5672
 ###< symfony/messenger ###
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
