--- a/back/config/services.yaml
+++ b/back/config/services.yaml
@@ -39,6 +39,11 @@ services:
     DDD\Application\Service\StorageService: '@App\Service\StorageService'
     DDD\Application\Event\EventRecorder: '@App\Event\EventRecorder'
     DDD\Application\Service\Mailer: '@App\Service\Mailer'
+    DDD\Application\Service\CsvReader:
+        public: true
 
     DDD\Model\ChargeBatchFile\Repository\ChargeBatchFileRepository: '@App\Repository\ChargeBatchFileRepository'
     DDD\Model\ChargeBatchFile\Service\ChargeBatchFileFactory: '@App\Service\ChargeBatchFileFactory'
+
+    DDD\Model\Charge\Repository\ChargeRepository: '@App\Repository\ChargeRepository'
+    DDD\Model\Charge\Service\ChargeFactory: '@App\Service\ChargeFactory'
