--- a/env/php/supervisord.conf
+++ b/env/php/supervisord.conf
@@ -1,3 +1,33 @@
 [supervisord]
 nodaemon = true
 user = root
+
+[program:create-deal-pipeline]
+command=/usr/local/bin/php /app/bin/console messenger:consume process-charge-batch-file --time-limit=300 --limit 10
+user=root
+numprocs=2
+startsecs=0
+autostart=true
+autorestart=true
+process_name=%(program_name)s_%(process_num)02d
+stopwaitsecs=10
+
+[program:process-charge]
+command=/usr/local/bin/php /app/bin/console messenger:consume process-charge --time-limit=300 --limit 10
+user=root
+numprocs=2
+startsecs=0
+autostart=true
+autorestart=true
+process_name=%(program_name)s_%(process_num)02d
+stopwaitsecs=10
+
+[program:email]
+command=/usr/local/bin/php /app/bin/console messenger:consume email --time-limit=300 --limit 10
+user=root
+numprocs=2
+startsecs=0
+autostart=true
+autorestart=true
+process_name=%(program_name)s_%(process_num)02d
+stopwaitsecs=10
