--- a/back/.env
+++ b/back/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=f91d66ae66438451f7bba914e8a6d0f0
 ###< symfony/framework-bundle ###
 
@@ -33,3 +33,7 @@ MESSENGER_TRANSPORT_DSN=amqp://ddd:1234@rabbitmq:5672
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='*'
+###< nelmio/cors-bundle ###
