--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - rabbitmq:rabbitmq
       - postgres:postgres
     volumes:
-      - ../back:/app
+#      - ../back:/app
       - ./php/supervisord.conf:/etc/supervisord.conf
       - ./php/php.ini:/usr/local/etc/php/php.ini
     restart: unless-stopped
@@ -21,11 +21,15 @@ services:
       - symfony_ddd
 
   nginx:
-    image: nginx:1.25-alpine
+    build:
+      context: "../front"
+      dockerfile: "../env/nginx/Dockerfile"
     ports:
       - "80:80"
       - "443:443"
+      - "3000:3000"
     volumes:
+      - ../back:/app
       - ./nginx/vhost.conf:/etc/nginx/conf.d/default.conf
     restart: unless-stopped
     networks:
