--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "kanastra-challenge-boilerplate",
   "private": true,
   "version": "1.0.0",
   "scripts": {
@@ -7,6 +6,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "tailwindcss": "tailwindcss -i ./src/global.css -o ./dist/index.css",
     "build": "tsc && vite build && bun run tailwindcss",
+    "buildd": "vite build && bun run tailwindcss",
     "preview": "vite preview",
     "dev:node": "concurrently \"npx tailwindcss -i ./src/global.css -o ./dist/index.css --watch\" \"vite\"",
     "build:node": "tsc && vite build && npm run tailwindcss"
@@ -16,9 +16,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "concurrently": "^8.2.2",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.16.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
