--- a/env/nginx/vhost.conf
+++ b/env/nginx/vhost.conf
@@ -2,6 +2,7 @@ server {
     root /var/www/html;
 
     listen 80;
+    client_max_body_size 8M;
 
     location / {
         try_files $uri $uri/ =404;
@@ -15,6 +16,8 @@ server {
     root /app/public;
 
     listen 3000;
+
+    client_max_body_size 8M;
 
     location / {
         try_files $uri /index.php$is_args$args;
