--- a/env/php/Dockerfile
+++ b/env/php/Dockerfile
@@ -14,6 +14,7 @@ RUN apk update && apk add --no-cache \
       git \
       bash \
     && install-php-extensions \
+      intl \
       amqp \
       swoole \
       pdo_pgsql \
@@ -22,14 +23,15 @@ RUN apk update && apk add --no-cache \
       @composer \
     && rm -rf /var/cache/apk/*
 
-COPY . .
-
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
-RUN  composer install && \
-    composer dump-env prod && \
-    php bin/console c:w && \
-    mkdir var/storage && \
-    chmod -R 777 var/*
+RUN mkdir -p /app/var/cache /app/var/log /app/var/storage && chmod -R 777 /app/var/*
+# COPY . .
+# RUN  composer install && \
+#     composer dump-env prod && \
+#     php bin/console c:w && \
+#     mkdir var/storage && \
+#     chmod -R 777 var/*
 
-CMD php bin/console d:m:m --no-interaction && php-fpm -D && /usr/bin/supervisord -n -c /etc/supervisord.conf
+# CMD php bin/console d:m:m --no-interaction && php-fpm -D && /usr/bin/supervisord -n -c /etc/supervisord.conf
+#CMD php-fpm -D && /usr/bin/supervisord -n -c /etc/supervisord.conf
