--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "build:node": "tsc && vite build && npm run tailwindcss"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
