Finalizando integração front

--- a/env/php/Dockerfile
+++ b/env/php/Dockerfile
@@ -24,13 +24,13 @@ RUN apk update && apk add --no-cache \
     && rm -rf /var/cache/apk/*
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
-
-COPY . .
-RUN  composer install && \
-  composer dump-env prod && \
-  php bin/console c:w && \
-  mkdir var/storage && \
-  chmod -R 777 var/*
-
-CMD php bin/console d:m:m --no-interaction && php-fpm -D && /usr/bin/supervisord -n -c /etc/supervisord.conf
+#
+#COPY . .
+#RUN  composer install && \
+#  composer dump-env prod && \
+#  php bin/console c:w && \
+#  mkdir var/storage && \
+#  chmod -R 777 var/*
+#
+#CMD php bin/console d:m:m --no-interaction && php-fpm -D && /usr/bin/supervisord -n -c /etc/supervisord.conf
 #CMD php-fpm -D && /usr/bin/supervisord -n -c /etc/supervisord.conf
